fixed z-index

--- a/style/style.css
+++ b/style/style.css
@@ -332,6 +332,7 @@ body {
   align-items: center;
   transition: transform 0.4s ease;
   transform: translateX(100%);
+  z-index: 9999999;
 }
 
 .nav-open .nav {
